# js-ng

./: .gitignore  .travis.yml  CODEOWNERS  Dockerfile  Makefile  README.md  apt.txt  codeserver-install.sh  contributing.md  dump.rdb  pyproject.toml  requirements.txt  sys.stdout  test11.txt  testDockerfile  test_code_coverage.py  test_code_coverage2.py  threesdk.spec  tox.ini  usershell.py  usershell.spec
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black-docstr.yml  build_image.yml  build_tagged_image.yml  jsng-ci-macos.yml  jsng-ci.yml  pythonapp.yml
docs/: README.md
docs/api/jumpscale/: god.html  index.html  loader.html
docs/notebooks/: config.ipynb  data.ipynb  dirs.ipynb  dns.ipynb  exceptions.ipynb  factories.ipynb  fs.ipynb  hashes.ipynb  http.ipynb  plateform.ipynb  process.ipynb  random_names.ipynb  schema.ipynb  serializers.ipynb  terminaltable.ipynb  time.ipynb  types.ipynb
docs/specs/: baseclasses.md  distributing_cmds.md  exceptions.md  god_object_namespaces_concepts.md  jsng_shell.md  loader.md  logging.md  poetry.md
docs/tests/: README.md
docs/wiki/: 3sdk.md  README.md  _sidebar.md  alerts.md  baseclasses.md  chat_engine.md  codingstyle.md  configmgmt.md  devprocess.md  distributing_cmds.md  docker.md  editor_setup.md  errorhandling.md  exceptions.md  executors.md  explorer_client.md  extend_j.md  generated_apis.md  githubactions.md  god_object_namespaces_concepts.md  identity.md  index.html  installation.md  intro.md  js-ng.md  jsng_shell.md  loader.md  loader_object_namespaces_concepts.md  logging.md  poetry.md  project_based_on_jsng.md  release.md  rpc.md  schemac.md  specs.md  stores.md  testing_contribution.md  threebot.md  zos_sal.md
docs/wiki/internals/: baseclasses.md
docs/wiki/research/: nginx_ssl.md
docs/wiki/tutorials/: container_management.md  deploying_website_and_packages.md  developing_client.md  developing_sal.md  docker_images.md  githubactions-ci.md  jsync.md  mybinder.md  platforminfo.md  salfs.md  startup_commands.md  tmux.md
examplescripts/: gitea_deploy.py
examplescripts/bcdb/: test_bcdb.py  test_index.db
examplescripts/loadtesting/: admin.py
jumpscale/: god.py  loader.py
jumpscale/chatflows/actors/: chatbot.py
jumpscale/chatflows/chats/: example.py
jumpscale/clients/: base.py
jumpscale/clients/currencylayer/: __init__.py  currencylayer.py
jumpscale/clients/digitalocean/: __init__.py  digitalocean.py  project.py
jumpscale/clients/docker/: __init__.py  docker.py
jumpscale/clients/explorer/: __init__.py  users.py
jumpscale/clients/gdrive/: __init__.py
jumpscale/clients/gedis/: __init__.py  gedis.py
jumpscale/clients/git/: __init__.py  git.py
jumpscale/clients/github/: __init__.py  github.py  repo.py
jumpscale/clients/gogs/: __init__.py  gogs.py
jumpscale/clients/mail/: __init__.py  mail.py
jumpscale/clients/peewee/: PeeweeFactory.py  __init__.py  peeweeClient.py
jumpscale/clients/redis/: __init__.py  redis.py
jumpscale/clients/s3/: __init__.py
jumpscale/clients/sendgrid/: __init__.py  sendgrid.py
jumpscale/clients/sonic/: __init__.py  client.py
jumpscale/clients/sshclient/: __init__.py  sshclient.py
jumpscale/clients/sshkey/: __init__.py  sshkey.py
jumpscale/clients/syncthing/: __init__.py
jumpscale/clients/test/: base_test.py  docker_client.py
jumpscale/clients/trello/: __init__.py  trello.py
jumpscale/clients/twilio/: __init__.py
jumpscale/clients/twilioSMS/: __init__.py  twilioSMS.py
jumpscale/clients/zdb/: __init__.py  client.py
jumpscale/clients/zerotier/: __init__.py
jumpscale/core/: base.py  config.py  exceptions.py  fields.py  logging.py
jumpscale/core/application/: __init__.py  application.py
jumpscale/core/base/: __init__.py  events.py  factory.py  fields.py  meta.py  store.py
jumpscale/core/config/: config.py
jumpscale/core/db/: __init__.py
jumpscale/core/dirs/: __init__.py  dirs.py
jumpscale/core/events/: __init__.py
jumpscale/core/exceptions/: exceptions.py
jumpscale/core/executors/: __init__.py  command_builder.py  local.py  remote.py  tmux.py
jumpscale/core/identity/: __init__.py
jumpscale/core/logging/: __init__.py  logging.py
jumpscale/data/IDgenerator/: IDGenerator.py
jumpscale/data/bcdb/: __init__.py  bcdb.py  clients.py  dumpsql.py  flush.py  interfaces.py  (+1 more)
jumpscale/entry_points/: jsctl.py  jsng.py  jsync.py  usershell.py
jumpscale/install/: Dockerfile  codeserver-install.py  codeserver-install.sh
jumpscale/logging/: __init__.py  logging.py
jumpscale/shell/: __init__.py  config.py
jumpscale/threesdk/: __init__.py  container.py  identitymanager.py  settings.py  simulator.py  threebot.py  usershell.spec
scripts/: js_shell.py
tests/: __init__.py  base_tests.py  test_factory.py  test_hashtool.py  test_loads_j.py
tests/clients/: base_test.py  docker_client.py  test_docker_client.py
tests/loadtesting/: README.md  run_locust.sh
(+452 files in other folders)
