[tool.poetry]
name = "js-ng"
packages = [{ include = "jumpscale" }]
version = "11.0.0-a3"
description = "system automation, configuration management and RPC framework"
authors = ["xmonader <xmonader@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pdoc3 = "^0.6.3"
pytoml = "^0.1.21"
secretconf = "^0.1.2"
better-exceptions = "^0.2.2"
pynacl = "1.3.0"
click = "^7.0"
ptpython = "^2.0"
loguru = "^0.3.2"
pillow = "^6.2.2"
fabric = "^2.4"
msgpack = "^0.6.1"
pylzma = "^0.5.0"
PyYAML = "^5.1"
arrow = "^0.15.7"
colorama = "^0.4.1"
gevent = "1.4.0"
faker = "^2.0"
terminaltables = "^3.1"
distro = "^1.4"
libtmux = "^0.8.2"
redis = "^3.3"
cryptocompare = "^0.6.4"
certifi = "^2019.6"
dill = "^0.3.0"
watchdog = "^0.9.0"
GitPython = "^3.0"
docker = "^4.2.0"
jinja2 = "^2.11.1"
psutil = "^5.7.0"
pudb = "^2019.1"
base58 = "^2.0.0"
netaddr = "^0.7.19"
prompt-toolkit = "<3.0.0"
bottle = "^0.12.18"
captcha = "^0.3"
Whoosh= "^2.7.4"
pycparser = "^2.20"
zipp = "^3.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.6"
ipdb = "^0.12.1"
black = {version = "^18.3-alpha.0", allow-prereleases = true}
flake8 = "^3.7"
parameterized = "^0.7.0"
pytest = "^5.0"
codecov = "^2.0"
hypothesis = "^4.28"
pytest-cov = "^2.7"
objgraph = "^3.4.1"

[tool.poetry.scripts]
jsng = "jumpscale.entry_points.jsng:run"
usershell = "jumpscale.entry_points.usershell:run"
jsctl = "jumpscale.entry_points.jsctl:cli"
jsync = "jumpscale.entry_points.jsync:cli"

[tool.black]
line-length = 120
target_version = ['py37']


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
