[tool.poetry]
name = "js-ng"
packages = [{ include = "jumpscale" }]
version = "11.0b17"
description = "system automation, configuration management and RPC framework"
authors = ["xmonader <xmonader@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
pdoc3 = "^0.10.0"
pytoml = "^0.1.21"
secretconf = "^0.1.2"
better-exceptions = "^0.2.2"
PyNaCl = "^1.5.0"
click = "^8.1.3"
ptpython = "^2.0"
jedi = "0.17.2"
loguru = "^0.3.2"
fabric = "^2.4"
msgpack = "^0.6.1"
pylzma = "^0.5.0"
PyYAML = "^5.1"
arrow = "^0.15.7"
colorama = "^0.4.1"
gevent = "^21.1.2"
faker = "^2.0"
terminaltables = "^3.1"
distro = "^1.4"
libtmux = "^0.8.2"
redis = "^3.3"
dill = "^0.3.0"
watchdog = "^2.1.9"
GitPython = "^3.0"
docker = "^4.2.0"
Jinja2 = "^3.1.2"
psutil = "^5.7.0"
pudb = "^2019.1"
prompt-toolkit = "<3.0.0"
bottle = "^0.12.18"
Whoosh= "^2.7.4"
pycparser = "^2.20"
zipp = "^3.1.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
ipython = "^7.6"
ipdb = "^0.12.1"
black = "^22.10.0"
flake8 = "^3.7"
parameterized = "^0.7.0"
pytest = "^7.1.3"
codecov = "^2.0"
hypothesis = "^4.28"
pytest-cov = "^2.7"
objgraph = "^3.4.1"

[tool.poetry.scripts]
jsng = "jumpscale.entry_points.jsng:run"
jsctl = "jumpscale.entry_points.jsctl:cli"
jsync = "jumpscale.entry_points.jsync:cli"

[tool.black]
line-length = 120
target_version = ['py37']

[tool.pytest.ini_options]
markers = ["integration: marks tests as integration (deselect with '-m \"not integration\"')",
           "unittests", "admin"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
