[tool.poetry]
authors = ["xmonader <xmonader@gmail.com>"]
description = "system automation, configuration management and RPC framework"
license = "MIT"
name = "js-ng"
packages = [{include = "jumpscale"}]
version = "12.0"

[tool.poetry.dependencies]
GitPython = "^3.0"
Jinja2 = "^3.1.2"
PyNaCl = "^1.5.0"
PyYAML = "^5.1"
Whoosh = "^2.7.4"
arrow = "^0.15.7"
better-exceptions = "^0.2.2"
bottle = "^0.12.18"
click = "^8.1.3"
colorama = "^0.4.1"
dill = "^0.3.0"
distro = "^1.4"
docker = "^4.2.0"
fabric = "^2.4"
faker = "^2.0"
gevent = "^21.1.2"
jedi = "0.17.2"
libtmux = "^0.8.2"
loguru = "^0.3.2"
msgpack = "^0.6.1"
pdoc3 = "^0.10.0"
prompt-toolkit = "<3.0.0"
psutil = "^5.7.0"
ptpython = "^2.0"
pudb = "^2019.1"
pycparser = "^2.20"
pylzma = "^0.5.0"
python = ">=3.7,<4.0"
pytoml = "^0.1.21"
redis = "^3.3"
requests = "^2.28.1"
secretconf = "^0.1.2"
terminaltables = "^3.1"
watchdog = "^2.1.9"
zipp = "^3.1.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
codecov = "^2.0"
flake8 = "^3.7"
hypothesis = "^4.28"
ipdb = "^0.12.1"
ipython = "^7.6"
objgraph = "^3.4.1"
parameterized = "^0.7.0"
pytest = "^7.1.3"
pytest-cov = "^2.7"

[tool.poetry.scripts]
jsctl = "jumpscale.entry_points.jsctl:cli"
jsng = "jumpscale.entry_points.jsng:run"
jsync = "jumpscale.entry_points.jsync:cli"

[tool.black]
line-length = 120
target_version = ['py37']

[tool.pytest.ini_options]
markers = [
  "integration: marks tests as integration (deselect with '-m \"not integration\"')",
  "unittests",
  "admin",
]

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
